[gd_scene load_steps=15 format=3 uid="uid://nmagwgfq5sh6"]

[ext_resource type="Script" uid="uid://c0264l466ro12" path="res://Scenes/battle_unit/battle_unit.gd" id="1_kx733"]
[ext_resource type="Texture2D" uid="uid://b804rgdbdcbwx" path="res://Assets/rogues.png" id="1_vwswx"]
[ext_resource type="Script" uid="uid://d077xoc6cueo6" path="res://Components/packed_sprite2d.gd" id="2_kx733"]
[ext_resource type="Resource" uid="uid://cu4dgk3miuwt5" path="res://Data/Units/bram.tres" id="2_mwr1c"]
[ext_resource type="PackedScene" uid="uid://c1whvt3bdqgxe" path="res://Scenes/health_bar/health_bar.tscn" id="3_mwr1c"]
[ext_resource type="Script" uid="uid://c5xultkdxcfn8" path="res://Components/hurtbox.gd" id="5_3nmhm"]
[ext_resource type="Script" uid="uid://c42nbbnb3c5sv" path="res://Scenes/battle_unit/ai/unit_ai.gd" id="7_3nmhm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6svng"]
size = Vector2(36, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gai5e"]
size = Vector2(36, 36)

[sub_resource type="Animation" id="Animation_kx733"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skin:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vwswx"]
resource_name = "attack"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.261799, 0.349066, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 0.8), Vector2(0.8, 1.2), Vector2(0.9, 1.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_mwr1c"]
resource_name = "cast"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.22, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 0.7), Vector2(0.7, 1.3), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.22, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.92549, 1, 0, 1), Color(0.92549, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6svng"]
resource_name = "move"
length = 0.55
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0, 0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1), Vector2(0.9, 0.9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skin:skew")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3nmhm"]
_data = {
&"RESET": SubResource("Animation_kx733"),
&"attack": SubResource("Animation_vwswx"),
&"cast": SubResource("Animation_mwr1c"),
&"move": SubResource("Animation_6svng")
}

[node name="BattleUnit" type="Area2D"]
script = ExtResource("1_kx733")
stats = ExtResource("2_mwr1c")

[node name="Skin" type="Sprite2D" parent="."]
skew = 0.0139911
texture = ExtResource("1_vwswx")
region_enabled = true
region_rect = Rect2(96, 192, 32, 32)
script = ExtResource("2_kx733")
coordinates = Vector2i(3, 6)
metadata/_custom_type_script = "uid://d077xoc6cueo6"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6svng")

[node name="HurtBox" type="Area2D" parent="."]
script = ExtResource("5_3nmhm")
metadata/_custom_type_script = "uid://c5xultkdxcfn8"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_gai5e")
debug_color = Color(0.99311, 0, 0.242441, 0.42)

[node name="HealthBar" parent="." instance=ExtResource("3_mwr1c")]
offset_left = -7.0
offset_top = -21.0
offset_right = 9.0
offset_bottom = -17.0

[node name="FSMDebugLabel" type="Label" parent="."]
offset_left = -65.0
offset_top = -36.0
offset_right = 65.0
offset_bottom = -18.0
horizontal_alignment = 1

[node name="UnitAI" type="Node" parent="." node_paths=PackedStringArray("debug_label", "actor")]
script = ExtResource("7_3nmhm")
debug_label = NodePath("../FSMDebugLabel")
actor = NodePath("..")
metadata/_custom_type_script = "uid://c42nbbnb3c5sv"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3nmhm")
}
